test/should_fail/arith_op_2.erl
-module(arith_op_2).

-spec fail(_) -> boolean().
fail(X) -> X div X.
